# Ares

./: .env.example  .gitignore  ARES_PIPELINE_COMPLETE_RECAP.md  BACKTESTING_GUIDE.md  DATA_EFFICIENCY_IMPROVEMENTS.md  DATA_LENGTH_MISMATCH_FIX_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  ENHANCED_INDICATORS_RECOMMENDATION.md  ENHANCED_REPORTING_SYSTEM.md  ERROR_HANDLING_SUMMARY.md  FEATURE_SELECTION_FIX_SUMMARY.md  FIXES_APPLIED.md  HMM_SYSTEM_ENHANCEMENTS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  INTEGRATION_SUMMARY.md  LIVE_TRADING_INTEGRATION_GUIDE.md  LIVE_TRADING_INTEGRATION_SUMMARY.md  MICRO_MOVEMENT_SYSTEM.md  MODULARIZATION_GUIDE.md  MONITORING_ENHANCEMENTS_SUMMARY.md  NAN_HANDLING_FIXES.md  OHLCV_VALIDATION_FIX.md  README_MODEL_TRAINER.md  README_TYPE_SAFETY.md  REGULARIZATION_IMPLEMENTATION.md  RESAMPLING_FIX_SUMMARY.md  STEP6_FIX_SUMMARY.md  STEP6_SHAP_FIXES.md  STEP6_TARGET_COLUMN_FIX_SUMMARY.md  SVM_FIX_SUMMARY.md  VALIDATOR_IMPROVEMENTS.md  ares_data_downloader.py  ares_data_preparer.py  ares_deep_analyzer.py  ares_launcher.py  ares_mailer.py  ares_optimizer.py  ares_pipeline.py  check_existing_data.py  (+52 more)
.github/workflows/: code_quality.yml
GUI/: README.md  api_server.py  index.html  package-lock.json  package.json  start.sh  tailwind.config.js  vite.config.js
GUI/src/: App.js  index.css
backtesting/: ares_backtester.py  ares_data_downloader.py  ares_data_downloader_clean.py  ares_data_downloader_optimized.py  ares_data_preparer.py  ares_deep_analyzer.py  ares_optimizer.py  ares_pipeline.py  config.py  main_backtester.py  main_orchestrator.py  training_pipeline.py
config/: combined_sizing.yaml  wavelet_caching_config.yaml
data/backups/: initial.sqlite
docs/: ADVANCED_MONITORING_CONFIGURATION.md  ADVANCED_MONITORING_IMPLEMENTATION_SUMMARY.md  ADVANCED_MONITORING_INTEGRATION_PLAN.md  ARES_LAUNCHER_COMPREHENSIVE_GUIDE.md  ARES_LAUNCHER_SYSTEM.md  ARES_LAUNCHER_USAGE_RECAP.md  BOT_CHANGELOG.md  CANDLE_ANALYZER_STATUS.md  CHALLENGER_MODE_GUIDE.md  COMPREHENSIVE_LOGGING_IMPLEMENTATION.md  COMPUTATIONALLY_AWARE_WAVELET_GUIDE.md  COMPUTATIONAL_OPTIMIZATION_SUMMARY.md  CONFIGURATION_USAGE_GUIDE.md  CRITICAL_ISSUES_FIXES.md  DATABASE_MIGRATION.md  DATA_LEAKAGE_PREVENTION_GUIDE.md  DEPENDENCIES_UPDATE_SUMMARY.md  ENHANCED_ENSEMBLE_INTEGRATION.md  ENHANCED_ERROR_HANDLING_GUIDE.md  ENHANCED_LAUNCHER_INTEGRATION.md  ENHANCEMENT_SUGGESTIONS.md  ERROR_HANDLING_GUIDE.md  EXCEPTION_HANDLING_PATTERNS.md  EXCHANGE_AB_TESTING_GUIDE.md  EXCHANGE_API_STANDARDIZATION.md  EXCHANGE_MODEL_TRANSFER_GUIDE.md  FINANCIAL_PERFORMANCE_IMPROVEMENTS.md  HMM_REGIME_CLASSIFICATION.md  HYPERPARAMETER_OPTIMIZATION_IMPROVEMENTS.md  IMPLEMENTATION_VERIFICATION.md  INFINITE_VALUES_FIX_SUMMARY.md  LARGE_DATASET_OPTIMIZATION_GUIDE.md  MANAGER_CLASSES_RESPONSIBILITIES.md  MLFLOW_VERSION_TRACKING.md  ML_TRAINING_VERIFICATION.md  MODEL_TRAINING_GUIDE.md  MULTICOLLINEARITY_FIX_INTEGRATION_CONFIRMATION.md  MULTICOLLINEARITY_FIX_SUMMARY.md  MULTI_TIMEFRAME_FEATURE_ENGINEERING.md  MULTI_TIMEFRAME_INTEGRATION_STATUS.md  (+54 more)
emails/: __init__.py  ares_mailer.py  email_command_listener.py  emails_config.py.example
examples/: autoencoder_feature_analysis_example.py  data_quality_example.py  enhanced_nan_analysis_example.py  enhanced_reporting_example.py  wavelet_caching_workflow.py
exchange/: __init__.py  base_exchange.py  binance  binance.py  binance_websocket.py  factory.py  gateio.py  gateio_websocket.py  mexc.py  mexc_optimized.py  mexc_updated.py  mexc_websocket.py  okx.py  okx_websocket.py
log/: manual_consolidation_20250810_003400.out  manual_consolidation_20250810_004033.out  manual_consolidation_20250810_004454.out  step1_na_issues.jsonl  test_parquet_20250810_005219.out
log/features_samples/: 20250811_224956_04_02_EngineerFeatures_Categories.txt  20250811_224956_04_02_EngineerFeatures_FormatReport.json  20250811_224958_04_03_Combine_Columns.txt  20250811_225503_04_04_FeatureSelection_Columns.txt  20250811_225504_04_05_Normalization_Columns.txt  20250811_225605_04_06_Autoencoder_Columns.txt  20250811_225607_04_07_FinalData_Columns.txt  20250811_234735_04_02_EngineerFeatures_Categories.txt  20250811_234738_04_03_Combine_Columns.txt  20250811_235049_04_04_FeatureSelection_Columns.txt  20250811_235050_04_05_Normalization_Columns.txt  20250811_235216_04_06_Autoencoder_Columns.txt  20250811_235218_04_07_FinalData_Columns.txt
mlruns/0/: meta.yaml
mlruns/917070489756191097/: meta.yaml
scripts/: README_GUI_LAUNCHER.md  analyze_timeframe.py  analyze_timeframe_incremental.py  assess_data_quality.py  blank_training_run.py  bot_monitor.py  check_notifications.py  compare_agg_trades_formats.py  configure_optimization_settings.py  consolidate_binance_15m.py  database_migration.py  demo_enhanced_ensemble_integration.py  demo_enhanced_trade_tracking.py  demo_mlflow_version_tracking.py  download_mexc_agg_trades.py  enhanced_training_launcher.py  fix_consolidated_data.py  fix_corrupted_data.py  fix_multicollinearity.py  fix_multicollinearity_issue.py  fix_multicollinearity_simple.py  gui_launcher.py  launch_advanced_monitoring.py  launch_full_test_run.py  launch_live_trading.py  launch_paper_trading.py  launch_portfolio_manager.py  launch_with_gui.py  launch_with_monitoring.py  migrate_parquet_datasets.py  paper_trader_launcher.py  regenerate_pickle_files.py  rename_data_files.py  resume_training.py  run_enhanced_backtesting.py  run_enhanced_training.py  run_event_bus_example.py  run_multi_timeframe_training.py  run_scans.py  run_scans.sh  (+34 more)
src/: System.py  ares_pipeline.py  config.py  config_optuna.py  main.py  main_modular.py  paper_trader.py  tasks.py
src/analyst/: __init__.py  advanced_feature_engineering.py  analyst.py  (+32 more)
state/: state.json
test_models/: analyst_1h_scaler_20250807_142512.pkl  analyst_1m_20250807_142513.pkl  model_metadata.json  tactician_1m_20250807_142518.pkl
tests/: run_comprehensive_tests.py  run_tests.py  test_comprehensive_integration.py  test_dual_model_system.py  test_enhanced_error_handling.py  test_enhanced_event_bus.py  test_event_bus_integration.py  test_system_validation.py
(+606 files in other folders)
