[tool.poetry]
name = "ares-trading-bot"
version = "0.1.0"
description = "Ares Trading Bot: Modular, ML-driven trading and backtesting framework"
authors = ["Remy Roche"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
# Core scientific stack
numpy = "^1.26.0,<2.0.0"
pandas = "^2.0.0"
scipy = "^1.12.0"
scikit-learn = "1.3.2"
imbalanced-learn = "0.11.0"

# ML/AI libraries
tensorflow = "^2.15.0"
keras = "^2.15.0"
lightgbm = "^4.3.0"
optuna = "^4.4.0"
joblib = "^1.3.0"
mlflow = "^3.1.0"
plotly = "^6.2.0"
pandas-ta = "^0.3.14b0"
shap = "^0.48.0"
arch = "^7.2.0"
pytorch-tabnet = "^4.1.0"

# Exchange and trading
ccxt = "^4.4.0"
python-binance = "^1.0.19"
ta = "^0.11.0"

# Networking and async
aiohttp = "^3.10.0"
aiohttp-retry = "^2.8.0"
websockets = "^12.0"
yarl = "^1.17.0"
aiosignal = "^1.4.0"
frozenlist = "^1.4.0"
multidict = "^6.0.0"
aiofiles = "^24.1.0"
aiosqlite = "^0.21.0"
aiodns = "^3.5.0"
pycares = "^4.9.0"
requests = "^2.31.0"

# Database and storage
firebase-admin = "^7.0.0"
influxdb-client = "^1.40.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"

# Data processing and analysis
pywavelets = "^1.8.0"
statsmodels = "^0.14.0"
filelock = "^3.14.0"
sympy = "^1.13.0"
networkx = "^3.3.0"
fsspec = "^2024.0.0"
patsy = "^0.5.0"

# Utilities
python-dotenv = "^1.0.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.2.0"
click = "^8.1.0"
rich = "^14.0.0"
tqdm = "^4.67.0"
colorama = "^0.4.6"
python-dateutil = "^2.8.0"
pytz = "^2024.1"
schedule = "^1.2.0"
python-json-logger = "^2.0.0"
scikit-optimize = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.17.0"
ruff = "^0.6.2"
vulture = "^2.11"
radon = "^6.0.1"
scalpel = "^0.6.1"
pylint = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ares = "src.main_modular:main" 